<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application name -->
    <string name="app_name" translatable="false">ANDROID_DCT</string>

    <!--  LoginActivity labels  -->
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>
    <string name="label_log_in">Log in</string>

    <!--  Activity titles  -->
    <string name="a_login_title">Authorization</string>
    <string name="a_location_title">Location</string>
    <string name="a_items_title">Items</string>
    <string name="a_settings_title">Settings</string>

    <!--  Drawer Navigation suntitle  -->
    <string name="label_finn_flare" translatable="false">Finn Flare</string>

    <!-- Drawer Navigation menu labels -->
    <string name="label_change_docs_date">Change docs date</string>
    <string name="label_send_results_to_server">Send results to server</string>
    <string name="label_save_results">Save results to file</string>
    <string name="label_upload_result_from_file">Upload result from file</string>
    <string name="label_reset_rfid_results">Reset rfid results</string>
    <string name="label_reset_barcode_results">Reset barcode results</string>
    <string name="label_reset_results">Reset results</string>
    <string name="label_setting">Setting</string>
    <string name="label_info">Info</string>

    <!-- Location Activity -->
    <string name="hint_location">Location</string>
    <string name="hint_documents">Document</string>

    <!-- Items Activity botton navigation menu lavel -->
    <string name="bottom_navigation_barcode">Barcode</string>
    <string name="bottom_navigation_rfid" translatable="false">RFID</string>
    <string name="bottom_navigation_plan">Plan</string>
    <string name="bottom_navigation_fact">Fact</string>
    <string name="bottom_navigation_search">Search</string>

    <!-- Items Activity dummy labels -->
    <string name="label_fragment_item_scan">Sorry, you don\'t have scanner hardware</string>
    <string name="label_fragment_item_search">Sorry, you don\'t have RFID scanner hardware</string>
    <string name="label_fragment_rfid_item_scan">Sorry, you don\'t have RFID scanner hardware</string>

    <string name="items_empty_name_corrector">Unknown item</string>

    <!-- Label for popup menu -->
    <string name="label_search">Search</string>

    <!-- Recycler dummy labels -->
    <string name="label_some_information">Some information</string>
    <string name="label_item_image" translatable="false">Item image</string>
    <string name="item_count_string">%1$d/%2$d</string>

    <!-- DialogFragmentInfo data -->
    <string name="d_f_info_title">Info</string>
    <string name="d_f_info_about_app">This app is designed for a terminal for collecting
        product data.</string>
    <string name="d_f_info_developers">Developers:\nMironov Gregory\nNedoluzhko Denis</string>
    <string name="d_f_info_version">Version 1.0</string>

    <!-- Setting labels -->
    <string name="setting_center_servel_url_title">Central server URL</string>
    <string name="setting_image_url_title">Images URL</string>
    <string name="setting_send_errors_title">Send errors to server</string>
    <string name="setting_download_images_title">Download images</string>
    <string name="setting_search_unknown_title">Search for unknown items</string>
    <string name="setting_send_data_online">Send data online</string>

    <!-- Array data -->
    <string name="array_not_selected_list">Not choosed</string>
    <string name="array_plan_not_found">Expected plan</string>
    <string name="array_plan_found">Found plan</string>
    <string name="array_correct_fact">Correct fact</string>
    <string name="array_wrong_fact">Wrong fact</string>

    <!-- Scanner's fragments labels -->
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="full_item_description">Full description</string>

    <string name="item_color">Color</string>
    <string name="item_size">Size</string>
    <string name="item_state">State</string>

</resources>